# Probe

./: CLAUDE.md  CODE_REVIEW_2026-04-25.md  CODE_REVIEW_TODOS.md  Cargo.toml  OAUTH2_ROADMAP.md  OPENAPI_TODOS.md  README.md  ux-wishlist.html
data/: http-client.env.json
data/.probe/oauth_configs/: Default.json
data/.probe/response_previews/: response-0.json  response-1.json  response-2.json  response-3.json
data/.probe/responses/: response-0.json  response-1.json  response-2.json  response-3.json
data/.probe/session/: state.json
data/collections/STAR/: test1.http  test2.http  test23.http  untitled-0.http
data/draft_previews/: request-0.json  request-1.json  selected_request.json
data/drafts/: request-0.json  request-1.json  selected_request.json
data/environments/: env-0.json
data/response_previews/: response-0.json  response-1.json  response-2.json  response-3.json  response-4.json  response-5.json  response-6.json  response-7.json
data/responses/: response-0.json  response-1.json  response-2.json  response-3.json  response-4.json  response-5.json  response-6.json  response-7.json
data/session/: state.json
data/snapshots/: last.json
data/workspace_snapshots/: current.json
docs/: memory-map.md  structure.md
src/: app.rs  main.rs
src/http_format/: mod.rs  parser.rs  writer.rs
src/oauth/: browser.rs  config.rs  middleware.rs  mod.rs  pkce.rs  store.rs
src/oauth/flows/: auth_code.rs  client_credentials.rs  device_code.rs  mod.rs  refresh.rs
src/openapi/: merge.rs  mod.rs  parser.rs  source.rs
src/openapi_import/: mod.rs
src/persistence/: mod.rs  models.rs  restore.rs  snapshot.rs  storage.rs
src/request_prep/: mod.rs
src/runtime/: executor.rs  mod.rs  types.rs
src/state/: app_state.rs  environment.rs  mod.rs  request.rs  response.rs  ui_state.rs
src/ui/: center_panel.rs  environment_editor.rs  inspector.rs  left_sidebar.rs  mod.rs  oauth_panel.rs  request_panel.rs  request_preview_modal.rs  response_panel.rs  response_viewer.rs  shell.rs  status_bar.rs  theme.rs  top_bar.rs
src/workspace/: bundle.rs  import.rs  mod.rs
(+5 files in other folders)
