[package]
name = "probe"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
eframe = { version = "0.34.1", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json"] }
rfd = "0.15.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
